--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,8 @@
     "angular": "~1.2.16",
     "angular-route": "~1.2.16",
     "angular-resource": "~1.2.16",
-    "angular-strap": "~2.0.0"
+    "angular-strap": "~2.0.0",
+    "underscore": "~1.6.0",
+    "angular-animate": "~1.2.16"
   }
 }
